<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">更新晓书</string>
    <string name="default_api_server_address">api.sunshine-library.org</string>
    <string name="default_upload_server_address">upload.sunshine-library.org</string>
    <string name="default_log_server_address">log.sunshine-library.org</string>

    <string name="metadata_download_success">同步成功</string>
    <string name="metadata_download_syncing">正在同步</string>
    <string name="metadata_download_failure">同步失败</string>
    <string name="metadata_download_all_success">成功更新数据！</string>

    <string name="signin_heading">登录晓书</string>
    <string name="name_input_legend">姓名</string>
    <string name="birthday_input_legend">生日</string>
    <string name="signin_submit_legend">生日</string>
    <string name="fetching_school">正在获取…</string>
    <string name="auth_failure">登录失败</string>
    <string name="no_network_connection">无网络连接</string>
    <string name="no_network_try_later">无法连接网络，请稍后再试</string>
    
    <string name="error_login_name_is_empty">姓名不能为空！</string>
    
    <string-array name="account_type_array">
        <item>学生</item>
        <item>教师</item>
        <item>项目人员</item>
    </string-array>

    <string-array name="grade_array">
        <item>一年级</item>
        <item>二年级</item>
        <item>三年级</item>
        <item>四年级</item>
        <item>五年级</item>
        <item>六年级</item>
        <item>初一</item>
        <item>初二</item>
        <item>初三</item>
    </string-array>

    <string-array name="class_array">
        <item>1班</item>
        <item>2班</item>
        <item>3班</item>
        <item>4班</item>
        <item>5班</item>
        <item>6班</item>
    </string-array>
</resources>