<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="服务器地址">

        <EditTextPreference android:key="local_server_address"
                            android:title="API服务器地址"
                            android:defaultValue="@string/default_api_server_address"
                />

        <EditTextPreference android:key="remote_server_address"
                            android:title="上传服务器地址"
                            android:defaultValue="@string/default_upload_server_address"
                />

        <EditTextPreference android:key="remote_server_address"
                            android:title="日志服务器地址"
                            android:defaultValue="@string/default_log_server_address"
                />
    </PreferenceCategory>

    <PreferenceCategory android:title="通用设置">
        <com.ssl.support.components.ResetPreference
                android:title="恢复默认设置"
                android:dialogMessage="您确定要将设置参数恢复成默认数值吗?"
                android:dialogTitle="恢复默认设置"
                />
    </PreferenceCategory>

    <PreferenceCategory android:title="关于">
        <Preference android:key="version_name"
                    style="?android:attr/preferenceInformationStyle"
                    android:title="版本"
                    android:summary="版本号"
                    android:persistent="false" />
    </PreferenceCategory>


</PreferenceScreen>